# AmES

./: .gitignore  Cargo.toml  README.md
docs/: changelog.txt  todo.txt
src/: main.rs
src/ames_cipher/: mod.rs
