[package]
name = "am_es"
version = "0.1.4"
authors = ["ray33ee <30669752+ray33ee@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
galois_2p8 = "0.1.0"
rand = "0.8.0"
cipher="0.2.1"
rand_chacha="0.3.0"
num-traits = "0.2"
num-derive = "0.2"

block-modes="0.7.0"
hex-literal="0.3.1"
hex="0.3.1"

byteorder = "1.4.3"